--- a/pom.xml
+++ b/pom.xml
@@ -314,7 +314,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.bouncycastle</groupId>
-                    <artifactId>bcprov-jdk15</artifactId>
+                    <artifactId>bcprov-jdk15on</artifactId>
                     <version>${bcprov.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -328,7 +328,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.bouncycastle</groupId>
-                    <artifactId>bcprov-jdk16</artifactId>
+                    <artifactId>bcprov-jdk15on</artifactId>
                     <version>${bcprov.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -353,12 +353,12 @@
         <xmlsec.version>1.5.2</xmlsec.version>
         <opensaml.version>2.5.1-1</opensaml.version>
         <xml.apis.version>1.3.04</xml.apis.version>
-        <bcprov.version>1.46</bcprov.version>
+        <bcprov.version>1.47</bcprov.version>
         <commons.logging.version>1.1.1</commons.logging.version>
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.9.1</xerces.version>
         <junit.version>4.8.2</junit.version>
-        <log4j.version>1.2.16</log4j.version>
+        <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.6.1</slf4j.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
