--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <developerConnection>
             scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/webservices/wss4j/trunk</url>
+        <url>http://svn.apache.org/repos/asf/webservices/wss4j/trunk</url>
     </scm>
     <organization>
         <name>The Apache Software Foundation</name>
@@ -91,6 +91,12 @@
             <organizationUrl>http://apache.org/</organizationUrl>
         </developer>
     </developers>
+
+    <parent>
+        <groupId>org.apache</groupId>
+        <artifactId>apache</artifactId>
+        <version>11</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
