--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -40,6 +40,7 @@ keystore = Cannot access/read keystore data
 missingCreated = Created time is missing
 missingSecurityHeader = Security header is missing
 missingSecurityProperties = SecurityProperties must not be null!
+noCallback=No password callback supplied
 noCert = No certificate provided
 noCertsFound = No certificates were found for {0}
 noCipher = EncryptedKey does not contain xenc:CipherData/xenc:CipherValue
