--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -208,6 +208,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.4.1</version>
