--- a/bindings/wss11-binding/pom.xml
+++ b/bindings/wss11-binding/pom.xml
@@ -17,18 +17,20 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0-beta</version>
+        <version>2.0-beta-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings-wss11</artifactId>
-    <version>2.0-beta</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security 1.1 Binding</name>
 
     <properties>
@@ -113,25 +115,28 @@
                 <configuration>
                     <tasks>
                         <delete includeemptydirs="true" failonerror="false">
-                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/xmlsoap" />
-                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/w3" />
+                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/xmlsoap"/>
+                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/w3"/>
                         </delete>
-                        <!--<replaceregexp file="${project.build.directory}/wss10.episode" match="&lt;\/bindings&gt;\s$" flags="s"
-                                replace="" />
-                        <replaceregexp file="${project.build.directory}/wss11.episode" match=".*&gt;" flags="s"
-                                replace="" />-->
+                        <!--<replaceregexp file="${project.build.directory}/wss10.episode"
+                                       match="&lt;\/bindings&gt;\s$" flags="s"
+                                replace=""/>
+                        <replaceregexp file="${project.build.directory}/wss11.episode"
+                                       match=".*&gt;" flags="s"
+                                replace=""/>-->
                         <xslt in="${project.build.directory}/wss11.episode" out="${project.build.directory}/wss11.episode.tmp">
                             <style>
-                                <file file="${basedir}/src/etc/bindings.xsl" />
+                                <file file="${basedir}/src/etc/bindings.xsl"/>
                             </style>
                         </xslt>
-                        <concat destfile="${project.build.directory}/generated-sources/episode/META-INF/sun-jaxb.episode" append="false">
+                        <concat destfile="${project.build.directory}/generated-sources/episode/META-INF/sun-jaxb.episode"
+                                append="false">
                             <header filtering="no" trimleading="yes">
                                 <![CDATA[<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
                                 <bindings version="2.1" xmlns="http://java.sun.com/xml/ns/jaxb">
                                 ]]>
                             </header>
-                            <filelist dir="${project.build.directory}" files="wss11.episode.tmp" />
+                            <filelist dir="${project.build.directory}" files="wss11.episode.tmp"/>
                             <footer filtering="no" trimleading="yes">
                                 <![CDATA[</bindings>
                                 ]]>
