--- a/bindings/wssc-binding/pom.xml
+++ b/bindings/wssc-binding/pom.xml
@@ -17,18 +17,20 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
   
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0-beta</version>
+        <version>2.0-beta-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings-wssc</artifactId>
-    <version>2.0-beta</version>
+    <version>2.0-beta-SNAPSHOT</version>
     <name>Apache WSS4J WS-SecureConversation binding</name>
 
     <properties>
@@ -123,7 +125,7 @@
                 <configuration>
                     <tasks>
                         <delete includeemptydirs="true" failonerror="false">
-                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/oasis_open" />
+                            <fileset dir="${project.build.directory}/generated-sources/xjc/org/oasis_open"/>
                         </delete>
                     </tasks>
                 </configuration>
