--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -16,19 +16,21 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.0-beta</version>
+        <version>2.0-beta-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-ws-security-dom</artifactId>
     <name>Apache WSS4J DOM WS-Security</name>
-    <version>2.0-beta</version>
+    <version>2.0-beta-SNAPSHOT</version>
     
     <properties>
         <wss4j.osgi.dynamic.import>
