--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -50,7 +50,7 @@
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.11.0</xerces.version>
         <xml.apis.version>1.4.01</xml.apis.version>
-        <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
+        <xmlsec.version>2.0.0-rc1</xmlsec.version>
         <xmlunit.version>1.4</xmlunit.version>
         
         <!-- OSGi related properties -->
