--- a/bindings/wss10-binding/pom.xml
+++ b/bindings/wss10-binding/pom.xml
@@ -23,12 +23,12 @@
     <parent>
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
-        <version>2.0.0-rc1</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <groupId>org.apache.wss4j</groupId>
     <artifactId>wss4j-bindings-wss10</artifactId>
-    <version>2.0.0-rc1</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security 1.0 Binding</name>
 
     <properties>
