--- a/ws-security-common/src/main/resources/messages/wss4j_errors.properties
+++ b/ws-security-common/src/main/resources/messages/wss4j_errors.properties
@@ -85,6 +85,7 @@ signatureKeyStoreNotSet = Signature KeyStore is not set
 signatureVerificationCryptoFailure = SignatureVerificationCrypto instantiation failed
 signatureVerificationKeyStoreNotSet = Signature verification KeyStore is not set
 spnegoKeyError = An error occurred in trying to unwrap a SPNEGO key
+unknownAlgorithm = An unknown algorithm was specified: {0}
 unableToLoadClass = Unable to load class {0}
 unhandledToken = Security token supported but currently not handled \"{0}\"
 unknownSignatureAlgorithm = An unknown signature algorithm was specified: {0}
@@ -95,3 +96,12 @@ unsupportedKeyInfo = Unsupported KeyInfo type
 unsupportedKeyTransp = unsupported key transport encryption algorithm: {0}
 unsupportedSecurityToken = Unsupported SecurityToken {0}
 secureProcessing.AllowRSA15KeyTransportAlgorithm = The use of RSAv1.5 key transport algorithm is discouraged. Nonetheless can it be enabled via the \"AllowRSA15KeyTransportAlgorithm\" property in the configuration.
+
+BadContextToken = The requested context elements are insufficient or unsupported
+UnsupportedContextToken = Not all of the values associated with the SCT are supported
+UnknownDerivationSource = The specified source for the derivation is unknown
+RenewNeeded = The provided context token has expired
+UnableToRenew = The specified context token could not be renewed.
+errorInKeyDerivation = Error in key derivation
+unsupportedSecConvVersion = Unsupported WS-SecureConversation version
+offsetError =  "Offset cannot be set along with generation - generation is already set"
