--- a/build.xml
+++ b/build.xml
@@ -27,8 +27,8 @@ Build Instructions:
 
         <property name='product.version.major' value='1'/>
         <property name='product.version.minor' value='6'/>
-        <property name='product.version.level' value='15'/>
-        <property name='product.version.qualifier' value=''/>
+        <property name='product.version.level' value='16'/>
+        <property name='product.version.qualifier' value='SNAPSHOT'/>
         <property name='product.version' value='${product.version.major}.${product.version.minor}.${product.version.level}${product.version.qualifier}'/>
         <property name="year" value="2014"/>
         <property name="copyright" value="Copyright &#169; ${year} Apache WSS4J Project. All Rights Reserved."/>
