--- a/pom.xml
+++ b/pom.xml
@@ -345,7 +345,7 @@
         <profile>
             <id>jdk16</id>
             <activation>
-                <jdk>1.6</jdk>
+                <jdk>[1.6,1.8]</jdk>
             </activation>
             <dependencies>
                 <dependency>
