--- a/ws-security-stax/pom.xml
+++ b/ws-security-stax/pom.xml
@@ -158,6 +158,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-common</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-dom</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
