--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -30,6 +30,23 @@
     <version>2.0.1-SNAPSHOT</version>
     <name>Apache WSS4J WS-Security Integration</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+         </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
