--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -221,6 +221,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.5</version>
                     <configuration>
                         <archive>
                             <manifestFile>${wss4j.manifest.location}</manifestFile>
